versioned_docs/version-2.16.0/platforms/bazzite.mdx
---
description: "Install Zaparoo on Bazzite: launch Steam, Lutris, and Heroic games with NFC cards on Bazzite-powered gaming PCs and handhelds."
keywords: [zaparoo bazzite, bazzite nfc, zaparoo lutris, zaparoo heroic, bazzite game launcher]
---

# Bazzite

:::warning[Beta]
Bazzite support is currently in beta. Some features may not work as expected.
:::

Zaparoo Core on [Bazzite](https://bazzite.gg/) supports launching games from Steam, Lutris, and Heroic, plus shell scripts. Release builds are available for both AMD64 and ARM64 architectures.

## File Paths

| Item               | Path                                   |
| ------------------ | -------------------------------------- |
| Config file        | `~/.config/zaparoo/config.toml`        |
| Data directory     | `~/.local/share/zaparoo`               |
| Log file           | `/tmp/<session_id>-zaparoo/core.log`   |
| Mappings directory | `~/.local/share/zaparoo/mappings`      |

Where `~` is the home directory of the current user.

## Install

Open a terminal and run:

```bash
curl -fsSL https://zaparoo.org/install.sh | bash
```

This installs all necessary components and sets up the service to run on startup. Since Bazzite has an immutable root filesystem, the installation is user-local (installed to `~/.local/bin`).

## Uninstall

Remove the installed components, leaving the application binary until last:

```bash
~/.local/bin/zaparoo -uninstall service
~/.local/bin/zaparoo -uninstall desktop
sudo ~/.local/bin/zaparoo -uninstall hardware
~/.local/bin/zaparoo -uninstall application
```

## Readers

<ReaderSupport
  groups={[
    {
      name: "NFC/RFID",
      readers: [
        { name: "PN532 USB", href: "../readers/nfc/pn532-usb", support: "supported", setup: "Auto-detected" },
        { name: "PN532 Module", href: "../readers/nfc/pn532-module", support: "supported", setup: "Depends on wiring", note: "UART can auto-detect. I2C is supported." },
        { name: "ACR122U", href: "../readers/nfc/acr122u", support: "supported", setup: "Auto-detected", note: "Uses libnfc: LED and beeper do not work, and some clone variants are incompatible." },
        { name: "RC522", href: "../readers/nfc/rc522", support: "limited", setup: "Via Simple Serial", note: "Requires a microcontroller; not a direct USB reader." },
      ],
    },
    {
      name: "Barcode and QR",
      readers: [
        { name: "App/Camera Scanner", href: "../app/", support: "supported", setup: "Via Zaparoo App" },
        { name: "RS232 Scanner", href: "../readers/barcode/rs232", support: "supported", setup: "Manual config" },
      ],
    },
    {
      name: "Optical and Media",
      readers: [
        { name: "Optical Drive", href: "../readers/optical-drive", support: "supported", setup: "Manual config" },
        { name: "External Drive", href: "../readers/external-drive", support: "supported", setup: "Manual enable" },
      ],
    },
    {
      name: "Custom and Virtual",
      readers: [
        { name: "MQTT Reader", href: "../readers/mqtt", support: "supported", setup: "Manual config" },
        { name: "Simple Serial", href: "../readers/simple-serial", support: "supported", setup: "Manual config" },
        { name: "File Reader", href: "../readers/file", support: "supported", setup: "Manual config" },
      ],
    },
    {
      name: "Displays and Integrations",
      readers: [
        { name: "TTY2OLED", href: "../readers/tty2oled", support: "supported", setup: "Manual enable" },
      ],
    },
  ]}
/>

## Launchers

| Launcher      | Systems | Notes                                  |
| ------------- | ------- | -------------------------------------- |
| Steam         | PC      | Native and Flatpak Steam installations |
| Lutris        | PC      | Native or Flatpak library data         |
| Heroic        | PC      | Epic Games and GOG titles              |
| Kodi          | Media   | Videos, movies, TV shows, music        |
| Web Browser   | N/A     | Opens URLs in default browser          |
| Shell Scripts | Any     | Custom `.sh` file execution            |

### Steam

Launches games from your Steam library. Both native (pre-installed) and Flatpak Steam installations are automatically detected. Games are launched using `xdg-open`, which works in both desktop and gaming modes.

Games are indexed from:
- `~/.steam/steam/steamapps/`
- `~/.local/share/Steam/`

To manually launch a Steam game, write `steam://<app_id>` to a token.

### Lutris and Heroic

Core indexes installed PC games from Lutris and Heroic during a media database update. It checks native and Flatpak library locations. Lutris comes with Bazzite; Heroic is available from Bazaar.

Run each launcher at least once and install its games before updating the media database. Core reads:

- Lutris installed games from `pga.db` and launches them with `lutris://` entries.
- Heroic installed Epic Games and GOG titles from its library files and launches them with `heroic://` entries.

### Gaming Mode

Core manages gamescope focus for non-Steam launchers in Gaming Mode, including Kodi, scripts, and custom launchers. It restores the previous focus state after the launched window closes. Return to Menu stops the active launcher; Steam's Game Mode shell remains responsible for displaying its menu.

### Kodi

Launch media content from a [Kodi](https://kodi.tv/) instance running on your network.

Supported content:
- Video and audio files
- Movies and TV episodes
- Music (songs, albums, artists)

```toml title="config.toml"
[[launchers.default]]
launcher = "Kodi"
server_url = "http://kodi:8080"
```

Replace `kodi:8080` with your Kodi instance's address and web interface port.

### Shell Scripts

Execute arbitrary shell scripts. Requires explicit allow list configuration for security.

```toml title="config.toml"
[launchers]
allow_file = [
    "^/home/.*/scripts/.*\\.sh$"
]
```
